[package]
edition = "2021"
name = "necronomicon"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam-channel = "0.5"
log = "0.4"
thiserror = "1"

[dev-dependencies]
coverage-helper = "0"
matches = "0.1"
test-case = "3"

[features]
default = []
test = []
